test/e2e/yaml/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: e2e-epp
spec:
  selector:
    app: e2e-epp
  ports:
  - name: ext-proc
    protocol: TCP
    port: 9002
    targetPort: 9002
    appProtocol: http2
  - name: zmq
    protocol: TCP
    port: 5557
    targetPort: 5557
    appProtocol: tcp
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: e2e-epp-health
spec:
  selector:
    app: e2e-epp
  ports:
  - name: health
    protocol: TCP
    port: 9003
    targetPort: 9003
    nodePort: 30081
    appProtocol: http2
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: e2e-epp-metrics
spec:
  selector:
    app: e2e-epp
  ports:
    - name: metrics
      protocol: TCP
      port: 9090
      targetPort: 9090
      nodePort: 32090
  type: NodePort
